--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -746,6 +746,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -770,6 +774,11 @@ video {
 
 .text-foreground {
   color: hsl(var(--foreground));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .text-primary {
