--- a/templates/base.templ
+++ b/templates/base.templ
@@ -5,7 +5,8 @@ templ Base(dark bool) {
 	<html lang="en" class={templ.KV("dark", dark)}>
 		<head>
 			<meta charset="utf-8"/>
-			<title>Go Blueprint Hello</title>
+			<title>Go Echo Starter</title>
+			<meta name="description" content="A basic starter project using Go, Echo, Templ, HTMX">
             <link href="/static/css/styles.css" rel="stylesheet"/>
 			<script src="/static/js/htmx.min.js"></script>
 		</head>
