--- a/templates/pages/register.templ
+++ b/templates/pages/register.templ
@@ -12,13 +12,13 @@ templ RegisterPage(dark bool) {
         <main class=" p-6 rounded-md border-border border bg-card text-card-foreground flex flex-col items-center justify-center gap-4 w-[300px]">
             <h1 class=" text-2xl ">Go starter</h1>
             <h2 class="  ">Register</h2>
-            <form class="flex flex-col gap-6 w-full" action="/auth/register" method="POST">
-            @components.Input(*components.DefaultInputProps("email", "email", "Email", "email", ""))
-
+            <form class="flex flex-col gap-6 w-full" hx-post="/auth/register" hx-target="#result">
+            @components.Input(*components.DefaultInputProps("name", "name", "Name", "text", ""))
             @components.Input(*components.DefaultInputProps("email", "email", "Email", "email", ""))
             @components.Input(*components.DefaultInputProps("password", "password", "Password", "password", ""))
-            @components.FormSubmitButton("Login")
+            @components.FormSubmitButton("Register")
             </form>
+            <div id="result"></div>
             <p class="text-sm">Have an account? Login <a href="/auth/login" class="underline underline-offset-2">here</a></p>
         </main>
         </div>
