added code for creating session id and redirecting if user is already logged in

--- a/templates/components/errorMessage.templ
+++ b/templates/components/errorMessage.templ
@@ -1,5 +1,5 @@
 package components
 
 templ ErrorMessage(message string) {
-    <p class="text-red-500 text-center w-full">{message}</p>
+    <p class="text-red-500 text-center w-full text-sm">{message}</p>
 }
