--- a/templates/components/successMessage.templ
+++ b/templates/components/successMessage.templ
@@ -1,5 +1,5 @@
 package components
 
 templ SuccessMessage() {
-    <p class="text-green-500 text-center w-full">Successfully registered. Click <a href="/auth/login" class="underline underline-offset-2">here</a> to login</p>
+    <p class="text-green-500 text-center w-full text-sm">Successfully registered. Click <a href="/auth/login" class="underline underline-offset-2">here</a> to login</p>
 }
