--- a/templates/base.templ
+++ b/templates/base.templ
@@ -9,6 +9,7 @@ templ Base(dark bool) {
 			<meta name="description" content="A basic starter project using Go, Echo, Templ, HTMX">
             <link href="/static/css/styles.css" rel="stylesheet"/>
 			<script src="/static/js/htmx.min.js"></script>
+			<script src="/static/js/script.js" defer></script>
 		</head>
 		<body class="bg-background text-foreground">
 				{ children... }
