--- a/templates/components/input.templ
+++ b/templates/components/input.templ
@@ -20,6 +20,7 @@ func DefaultInputProps(id string, name string, placeholder string, inputType str
         Placeholder: placeholder,
         Disabled: false,
         ClassName: className,
+        Required: true,
     }
 }
 
