added home page, some changes in status codes, redirect to home when login

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -58,3 +58,11 @@
     --chart-5: 340 75% 55%;
   }
 }
+
+.htmx-indicator {
+  display: none;
+}
+
+.htmx-request.htmx-indicator {
+  display: inline;
+}
