--- a/templates/pages/register.templ
+++ b/templates/pages/register.templ
@@ -17,7 +17,10 @@ templ RegisterPage(dark bool) {
             @components.Input(*components.DefaultInputProps("email", "email", "Email", "email", ""))
             @components.Input(*components.DefaultInputProps("password", "password", "Password", "password", ""))
             <div id="result"></div>
-            @components.FormSubmitButton("Register")
+
+            @components.FormSubmitButton() {
+                Register
+            }
             </form>
             <p class="text-sm">Have an account? Login <a href="/auth/login" class="underline underline-offset-2">here</a></p>
         </main>
