--- a/templates/pages/login.templ
+++ b/templates/pages/login.templ
@@ -12,7 +12,7 @@ templ LoginPage(dark bool) {
         <main class=" p-6 rounded-md border-border border bg-card text-card-foreground flex flex-col items-center justify-center gap-4 w-[300px]">
             <h1 class=" text-2xl ">Go starter</h1>
             <h2 class="  ">Login</h2>
-            <form class="flex flex-col gap-6 w-full" hx-post="/auth/login" hx-target="#result" hx-indicator="#loading" >
+            <form class="flex flex-col gap-6 w-full" hx-post="/auth/login" hx-target="#result" hx-indicator="#loading"  hx-disabled-elt="find button" autocomplete="on" >
             @components.Input(*components.DefaultInputProps("email", "email", "Email", "email", "", "email"))
             @components.Input(*components.DefaultInputProps("password", "password", "Password", "password", "", "password"))
             <div id="result"></div>
