--- a/templates/pages/register.templ
+++ b/templates/pages/register.templ
@@ -9,7 +9,7 @@ import (
 templ RegisterPage(dark bool) {
     @templates.Base(dark) {
         <div class=" h-screen w-screen grid place-items-center">
-        <main class=" p-6 rounded-md border-border border bg-card text-card-foreground flex flex-col items-center justify-center gap-4 w-[300px]">
+        <main class=" p-6 rounded-md border-border border bg-card text-card-foreground flex flex-col items-center justify-center gap-4 w-[300px]"  hx-disabled-elt="find button">
             <h1 class=" text-2xl ">Go starter</h1>
             <h2 class="  ">Register</h2>
             <form class="flex flex-col gap-6 w-full" hx-post="/auth/register" hx-target="#result" autocomplete="on">
