minor seo changes

--- a/templates/pages/login.templ
+++ b/templates/pages/login.templ
@@ -23,7 +23,7 @@ templ LoginPage(dark bool) {
                 </div>
             }
             </form>
-            <p class="text-sm">New user? Register <a href="/auth/register" class="underline underline-offset-2">here</a></p>
+            <p class="text-sm">New user? <a href="/auth/register" class="underline underline-offset-2">Register here</a></p>
         </main>
         </div>
     }
