--- a/templates/pages/register.templ
+++ b/templates/pages/register.templ
@@ -22,7 +22,7 @@ templ RegisterPage(dark bool) {
                 Register
             }
             </form>
-            <p class="text-sm">Have an account? Login <a href="/auth/login" class="underline underline-offset-2">here</a></p>
+            <p class="text-sm">Have an account? <a href="/auth/login" class="underline underline-offset-2">Login here</a></p>
         </main>
         </div>
     }
