--- a/templates/base.templ
+++ b/templates/base.templ
@@ -7,7 +7,9 @@ templ Base(dark bool) {
 			<meta charset="utf-8"/>
 			<title>Go Echo Starter</title>
 			<meta name="description" content="A basic starter project using Go, Echo, Templ, HTMX">
-            <link href="/static/css/styles.css" rel="stylesheet"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+			
+			<link href="/static/css/styles.css" rel="stylesheet"/>
 			<script src="/static/js/htmx.min.js"></script>
 			<script src="/static/js/script.js" defer></script>
 		</head>
